force-app/main/default/objects/AI_Provider_Setting__mdt/AI_Provider_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Per-provider metadata for OpenAI-compatible AI providers. MasterLabel = provider display name (e.g. Neuralwatt, DeepSeek, OpenRouter). The Base URL for each provider lives in the matching Named Credential (callout:&lt;Provider&gt;_API). Api_Key__c must be set manually in Setup after deploy — never commit real keys to source.</description>
    <label>AI Provider Setting</label>
    <pluralLabel>AI Provider Settings</pluralLabel>
</CustomObject>