force-app/main/default/objects/AI_Provider_Setting__mdt/fields/Api_Key__c.field-meta.xml
<CustomField>
    <fullName>Api_Key__c</fullName>
    <description>API key for this AI provider. Set via Setup on the provider record.</description>
    <label>API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>