force-app/main/default/objects/AI_Provider_Setting__mdt/fields/Base_Url__c.field-meta.xml
<CustomField>
    <fullName>Base_Url__c</fullName>
    <description>OpenAI-compatible base URL for this provider. Apex appends /chat/completions and /models. e.g. https://api.neuralwatt.com/v1</description>
    <label>Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>