force-app/main/default/objects/AI_Provider_Setting__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <description>When true, this provider appears in the chatbot UI and its models are fetched. Set false to hide a provider without deleting its config.</description>
    <defaultValue>true</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>